--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,7 +21,14 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
+          # list of Docker images to use as base name for tags
           images: johnytiago/todo-list-app
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=ref,event=tag
+            type=semver,pattern={{version}}
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
