--- a/Chart.yaml
+++ b/Chart.yaml
@@ -5,6 +5,6 @@ type: application
 version: 0.1.0
 appVersion: "1.0"
 dependencies:
-- name: todo-list-app
+- name: todo-list
   version: 0.1.1
   repository: https://github.com/johnytiago/todo-list-chart
