--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,6 +25,7 @@ jobs:
           images: johnytiago/todo-list-app
           # generate Docker tags based on the following events/attributes
           tags: |
+            type=sha,prefix=,suffix=,format=short
             type=ref,event=branch
             type=ref,event=pr
             type=semver,pattern={{version}}
